settings view from saksia with choosing therapy and diabetic type

--- a/bti8108.groupbjjm.diabetespass/bti8108.groupbjjm.diabetespass/bti8108.groupbjjm.diabetespass-Info.plist
+++ b/bti8108.groupbjjm.diabetespass/bti8108.groupbjjm.diabetespass/bti8108.groupbjjm.diabetespass-Info.plist
@@ -20,7 +20,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>ch.bfh.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>ch.bfh.diabetesApp$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -39,6 +39,8 @@
 	<array>
 		<string>MKDirectionsModePedestrian</string>
 	</array>
+	<key>UILaunchStoryboardName</key>
+	<string>Launch Screen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main_iPhone</string>
 	<key>UIMainStoryboardFile~ipad</key>
@@ -46,6 +48,7 @@
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
+		<string>healthkit</string>
 	</array>
 	<key>UIStatusBarTintParameters</key>
 	<dict>
