--- a/bti8108.groupbjjm.diabetespass/bti8108.groupbjjm.diabetespass/bti8108.groupbjjm.diabetespass-Info.plist
+++ b/bti8108.groupbjjm.diabetespass/bti8108.groupbjjm.diabetespass/bti8108.groupbjjm.diabetespass-Info.plist
@@ -20,7 +20,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>ch.bfh.diabetesApp$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>diabetesApp$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
